fixed button + login overlap

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ font-size:0.7em;
 
 .fullScreen {
     display:flexbox;
-    width: clamp(800px, 100vw, 1200px);
+    width: clamp(925px, 100vw, 1200px);
     height: clamp(488px, 100vw, 732px);
 }
 
@@ -56,6 +56,7 @@ body {
 }
 
 .paragraph {
+    margin-left: 10px;
     position: absolute;
     font-size:calc(0.5em + 0.5vw);
     margin-top: 8%;
@@ -69,7 +70,7 @@ fieldset {
     grid-template-columns: 50% 50%;
     margin-top: 37%;
     font-size: calc(1em + 0.5vw);
-    background-color:white;
+    background-color:rgb(251, 245, 245);
     border-left:none;
     border-right: none;
     border-bottom: 2px inset #956F59;
@@ -89,6 +90,7 @@ input {
     border-right: none;
     width: 200px;
     margin-bottom: .8em;
+    height: 20px;
 }
 
 input:hover {
@@ -120,12 +122,13 @@ button:active {
 
 .buttons {
     position: absolute;
-    margin-top: 77%;
+    margin-top: 84%;
+
 }
 
 .logIn {
     position: absolute;
-    margin-top: 85%;
+    margin-top: 93%;
     padding-left: 40px;
     font-size: calc(12px + .1em);
 }
